--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -111,4 +111,33 @@
 
 .drawer-navigation .k-drawer-wrapper {
   height: 100%;
+  border-right: 1px solid var(--kendo-color-border, rgba(0, 0, 0, 0.08));
+  background: linear-gradient(90deg, rgba(250, 250, 250, 0.80) 85%, rgba(236, 236, 236, 0.80) 100%);
+  padding: 8px;
+}
+
+.k-drawer-item {
+  border-radius: 12px;
+  border : 1px solid transparent;
+}
+
+.k-drawer-item.k-hover,
+.k-drawer-item:hover {
+  border-radius: 8px;
+  border-color: #BACAE3;
+  background-color: transparent;
+}
+
+.k-drawer-item.k-selected {
+    border-color: #ffffff;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: var(--kendo-elevation-2);
+    color: currentColor;
+}
+
+.k-drawer-item.k-selected.k-hover,
+.k-drawer-item.k-selected:hover {
+  border-color: #BACAE3;
+  background-color: transparent;
+  color: currentColor;
 }
