--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -114,6 +114,24 @@
   border-right: 1px solid var(--kendo-color-border, rgba(0, 0, 0, 0.08));
   background: linear-gradient(90deg, rgba(250, 250, 250, 0.80) 85%, rgba(236, 236, 236, 0.80) 100%);
   padding: 8px;
+  position: relative;
+}
+
+.k-drawer-wrapper::after {
+  content: "";
+  display: block;
+  width: 815px;
+  height: 63.344px;
+  position: absolute;
+  background: conic-gradient(from 270deg at 47.29% 49.93%, rgba(255, 0, 251, 0.60) 0deg, rgba(0, 200, 255, 0.30) 180deg, rgba(0, 119, 255, 0.60) 360deg);
+  filter: blur(75px);
+  opacity: 0.6;
+  top: 50%;
+  right: -400px;
+  transform: translateY(-50%) rotate(270deg);
+  transform-origin: center;
+  border-radius: 815px;
+  pointer-events: none;
 }
 
 .k-drawer-item {
