--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -119,6 +119,10 @@
 }
 */
 
+.hero {
+  background: linear-gradient(180deg, rgba(250, 250, 250, 0.80) 85%, rgba(236, 236, 236, 0.80) 100%);
+}
+
 /* Search Input */
 .search-input {
   border-width: 2px;
