--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -95,6 +95,10 @@ html, body, #root {
   background: linear-gradient(180deg, rgba(250, 250, 250, 0.80) 85%, rgba(236, 236, 236, 0.80) 100%);
 }
 
+.financial-analysis .hero {
+  background: transparent;
+}
+
 /* Search Input */
 .search-input {
   border-width: 2px;
@@ -573,11 +577,21 @@ html, body, #root {
     flex-shrink: 0;
     width: auto;
   }
+
+  .financial-analysis .hero,
+  .financial-analysis .chat-wrapper {
+    padding: 64px;
+  }
 }
 
 /* Large (lg) - 992px and up */
 @media (min-width: 992px) {
   /* Add lg breakpoint styles here */
+
+
+  .financial-analysis .hero {
+    max-width: 540px;
+  }
 }
 
 /* Extra Large (xl) - 1200px and up */
