--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -95,7 +95,9 @@ html, body, #root {
   background: linear-gradient(180deg, rgba(250, 250, 250, 0.80) 85%, rgba(236, 236, 236, 0.80) 100%);
 }
 
-.financial-analysis .hero {
+.financial-analysis .hero,
+.value-proposition .hero,
+.knowledge-assistant-hero-wrapper {
   background: transparent;
 }
 
@@ -232,7 +234,8 @@ html, body, #root {
    left: -60px;
 }
 
-.user-selection-wrapper:after {
+.user-selection-wrapper:after,
+.gradient-wrapper:after {
     content: "";
     display: block;
     width: 100%;
@@ -246,7 +249,14 @@ html, body, #root {
     transform-origin: center;
     border-radius: 815px;
     pointer-events: none;
-    background: conic-gradient(from 180deg at 49.93% 47.29%, rgba(0, 119, 255, 0.6) 0deg, rgba(0, 200, 255, 0.3) 180deg, rgba(255, 0, 251, 0.6) 360deg);
+   
+}
+
+.user-selection-wrapper:after {
+  background: conic-gradient(from 180deg at 49.93% 47.29%, rgba(0, 119, 255, 0.6) 0deg, rgba(0, 200, 255, 0.3) 180deg, rgba(255, 0, 251, 0.6) 360deg);
+}
+.gradient-wrapper:after {
+  background: conic-gradient(from 180deg at 49.93% 47.29%, rgba(255, 0, 251, 0.6) 0deg, rgba(0, 200, 255, 0.3) 180deg, rgba(0, 119, 255, 0.6) 360deg);
 }
 
 .user-selection-wrapper-loading:after {
@@ -547,7 +557,7 @@ html, body, #root {
 }
 
 .rag-hero-wrapper {
-  padding: 48px 32px;
+  padding: 48px;
   max-width: 100%;
   box-sizing: border-box;
 }
