chore: adjust gradients

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -266,10 +266,9 @@ html, body, #root {
     rgba(0, 119, 255, 0.6) 360deg
   );
   filter: blur(75px);
-  opacity: 0.6;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 115px;
+  bottom: 64px;
   border-radius: 815px;
   pointer-events: none;
   z-index: -1;
@@ -289,9 +288,8 @@ html, body, #root {
     rgba(0, 119, 255, 0.6) 360deg
   );
   filter: blur(75px);
-  opacity: 0.6;
   left: 50%;
-  bottom: 115px;
+  bottom: 0;
   transform: translateX(-50%);
   border-radius: 815px;
   pointer-events: none;
