--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -67,14 +67,8 @@ html, body, #root {
   --kendo-h3-line-height: 1.2;
 }
 
-.hero {
+.value-proposition-results-hero.hero {
   background: linear-gradient(180deg, rgba(250, 250, 250, 0.80) 85%, rgba(236, 236, 236, 0.80) 100%);
-}
-
-.financial-analysis .hero,
-.value-proposition .hero,
-.knowledge-assistant-hero-wrapper {
-  background: transparent;
 }
 
 /* Search Input */
@@ -114,7 +108,7 @@ html, body, #root {
   box-shadow: var(--kendo-elevation-4);
 }
 
-.search-input .send-button {
+.search-input .k-button {
   border: none;
 
 }
@@ -226,7 +220,7 @@ html, body, #root {
     transform-origin: center;
     border-radius: 815px;
     pointer-events: none;
-   
+    z-index: -1;
 }
 
 .user-selection-wrapper:after {
@@ -255,7 +249,8 @@ html, body, #root {
     border-radius: 815px;
     pointer-events: none;
     background: conic-gradient(from 180deg at 49.93% 47.29%, rgba(0, 119, 255, 0.6) 0deg, rgba(0, 200, 255, 0.3) 180deg, rgba(255, 0, 251, 0.6) 360deg);
-}
+    z-index: -1;
+  }
 
 /* Financial Analysis gradient - positioned higher in the content, only shown before conversation starts */
 .financial-analysis .chat-wrapper.show-gradient::after {
@@ -271,13 +266,12 @@ html, body, #root {
     rgba(0, 119, 255, 0.6) 360deg
   );
   filter: blur(75px);
-  opacity: 0.6;
   left: 50%;
   transform: translateX(-50%);
-  bottom: 115px;
+  bottom: 64px;
   border-radius: 815px;
   pointer-events: none;
-  z-index: 0;
+  z-index: -1;
 }
 
 /* Knowledge Assistant gradient - positioned lower in the content, only shown before conversation starts */
@@ -294,13 +288,12 @@ html, body, #root {
     rgba(0, 119, 255, 0.6) 360deg
   );
   filter: blur(75px);
-  opacity: 0.6;
   left: 50%;
-  bottom: 115px;
+  bottom: 0;
   transform: translateX(-50%);
   border-radius: 815px;
   pointer-events: none;
-  z-index: 0;
+  z-index: -1;
 }
 
 .k-drawer-item {
@@ -784,12 +777,20 @@ html, body, #root {
 /* Search Input Buttons */
 .k-button-lg.search-input-button, 
 .k-button-lg.send-button {
-  padding: 11px;
+  padding: 10px;
+}
+
+.search-input .k-button {
+  color: #A1B0C7;
 }
 
 .search-input .send-button {
   color: #fff;
   background-color: #A1B0C7;
+}
+
+.search-input .k-textarea {
+  align-self: stretch;
 }
 
 /* Vectors Background */
@@ -1171,6 +1172,10 @@ html, body, #root {
   padding: 10px;
 }
 
+.home-section .search-input-container {
+  max-width: 800px;
+}
+
 .home-demo-icon {
   width: 48px;
   height: 48px;
@@ -1258,13 +1263,15 @@ html, body, #root {
   padding: 24px;
 }
 
-.value-proposition-results-container {
-  background-color: rgba(255, 255, 255, 0.6);
+.value-proposition-textarea > .k-input-inner {
+  padding: 0;
 }
 
-.value-proposition-results-hero {
+.value-proposition-results-hero,
+.ai-search-results-hero {
   border-bottom: 1px solid rgba(0, 0, 0, 0.08);
   background: linear-gradient(180deg, rgba(250, 250, 250, 0.80) 85%, rgba(236, 236, 236, 0.80) 100%);
+  z-index: -2;
 }
 
 .value-proposition-results-title {
@@ -1281,7 +1288,7 @@ html, body, #root {
   background-color: rgba(255, 255, 255, 0.5);
   border: 1px solid white;
   box-shadow: 0 2px 6px 0 rgba(13, 10, 44, 0.08);
-  backdrop-filter: blur(2px);
+  position: relative;
 }
 
 .value-proposition-label {
